plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'me.hys'
version = '0.0.1-SNAPSHOT'
description = 'CareMate-Backend'

java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

configurations {
    compileOnly { extendsFrom annotationProcessor }
}

repositories { mavenCentral() }

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'     // 필요 시 유지
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // DB 드라이버는 런타임에만 필요
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'org.postgresql:postgresql'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // 메일
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // 기타
    implementation 'org.jsoup:jsoup:1.17.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // WebClient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // XML <-> POJO (Jackson XML)
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

    // env
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // resend
    implementation 'com.resend:resend-java:3.+'
}

tasks.named('test') {
    useJUnitPlatform()
}
